--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,10 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
     <title>PIPSHASH</title>
 </head>
 <body>
-    <h1>Bienvenido a Domino's Pipshash</h1> 
+    <div class="contenedor">
+
+        <div class="menu">
+            <a class="menu_link" href="#">Administrar Pipshash</a>
+            <a class="menu_link" href="#">Administrar Repas</a>
+            <a class="menu_link" href="#">Administrar Pedidos</a>
+        </div>
+
+        <div class="dashboard">
+            <h1 class="titulo">Dashboard de Domino's Pipshash</h1>
+
+            <div class="dashboard_contenedor">
+
+                <div class="dashboard_contenedor-carta">
+                    <h2 class="carta_titulo">Pizzas</h2>
+                    
+                    <div class="carrusel">
+                        <button class="carrusel_btn izquierda" onclick="cambiarImagenPizza(-1)">❮</button>
+                        <img id="pizzaImg" src="{{ url_for('static', filename='img/pizza1.webp') }}" class="carrusel_img" alt="Pizza">
+                        <button class="carrusel_btn derecha" onclick="cambiarImagenPizza(1)">❯</button>
+                    </div>
+                    
+                    <p id="pizzaSabor" class="carrusel_texto">Pepperoni</p>
+                </div>
+                
+                <div class="dashboard_contenedor-carta">
+                    <h2 class="carta_titulo">Repartidores</h2>
+                    
+                    <div class="carrusel">
+                        <button class="carrusel_btn izquierda" onclick="cambiarImagenRepartidor(-1)">❮</button>
+                        <img id="repartidorImg" src="{{ url_for('static', filename='img/repa1.png') }}" class="carrusel_img" alt="Repartidor">
+                        <button class="carrusel_btn derecha" onclick="cambiarImagenRepartidor(1)">❯</button>
+                    </div>
+                    
+                    <p id="repartidorNombre" class="carrusel_texto">Margarito</p>
+                </div>
+                
+                
+
+                <div class="dashboard_contenedor-carta">
+                    <h2 class="carta_titulo">Pedidos en curso</h2>
+                    
+                    <table class="tabla_pedidos">
+                        <thead>
+                            <tr>
+                                <th>Num de pedido</th>
+                                <th>Pizzas</th>
+                                <th>Repartidor</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>#001</td>
+                                <td>Pepperoni, Hawaiana</td>
+                                <td>Vlad</td>
+                            </tr>
+                            <tr>
+                                <td>#002</td>
+                                <td>Hawaiana, Mexicana</td>
+                                <td>Oscar</td>
+                            </tr>
+                            <tr>
+                                <td>#003</td>
+                                <td>Queso</td>
+                                <td>Margarito</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
+
+            </div>
+        </div>
+
+
+    </div>
     
+    <script src="{{url_for('static', filename='script.js')}}"></script>
 </body>
 </html>
