--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Bienvenido a Domino's Pipshash</h1> 
+    <br> 
+    <a href="{{ url_for('repartidores.listar_repartidores') }}" class="button is-primary">
+        <i class="fa-solid fa-motorcycle"></i> &nbsp; Ver Repartidores
+    </a>
+    </br>
     
 </body>
 </html>
