Revert "Hotfix/solucion rutas crud"

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
     <div class="contenedor">
 
         <div class="menu">
-            <a class="menu_link" href="{{url_for('pipshash.listar_pizza')}}">Administrar Pipshash</a>
+            <a class="menu_link" href="#">Administrar Pipshash</a>
             <a class="menu_link" href="#">Administrar Repas</a>
             <a class="menu_link" href="#">Administrar Pedidos</a>
         </div>
