--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="theme-light" style="background-color: #e0f2ff;">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
@@ -15,38 +15,16 @@
       th, td { border: 1px solid #ddd; padding: 10px; text-align: left; }
       th { background-color: #004080; color: white; }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <header class="hero is-small">
         <div class="hero-body">
-            <h1 class="title has-text-centered is-1">Pipshas</h1>
+            <h1 class="title has-text-centered is-1">Domino's Pipshash</h1>
             <h2 class="subtitle has-text-centered is-4">Las mejores de San Juan</h2>
         </div>
     </header>
     <div class="container mt-5">
         {% block content %}{% endblock %}
-    </div>
-  </body>
-</html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
-    <script src="https://kit.fontawesome.com/ee9903c79f.js" crossorigin="anonymous"></script>
-    <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    <header>
-        <br>
-        <h1 class="title has-text-centered is-1">Dominos Pipshash</h1>
-        <h2 class="subtitle has-text-centered is-4">Las mas nenas de San Juan</h2>
-        <hr>
-    </header>
-    <div class="container">
-        <ul class="list">
-            {% block content %}{% endblock %}
-        </ul>
     </div>
 </body>
 </html>
