--- a/app/templates/pipshash/create_pizza.html
+++ b/app/templates/pipshash/create_pizza.html
@@ -6,7 +6,7 @@
 <div class="columns">
     <div class="column is-offset-3 is-6">
         <h1 class="title">Crear nueva pizza</h1>
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             <div class="field">
                 <label class="label">Nombre</label>
                 <div class="control">
@@ -24,6 +24,12 @@
                 <label class="label">Queso</label>
                 <div class="control">
                     <input class="input" type="text" name="queso" required>
+                </div>
+            </div>
+            <div class="field">
+                <label class="label"">Imagen</label>
+                <div class="control">
+                    <input class="input" type="file" name="imagen" required>
                 </div>
             </div>
 
