--- a/app/templates/pipshash/listar_pizza.html
+++ b/app/templates/pipshash/listar_pizza.html
@@ -3,26 +3,37 @@
 {% block title %}Pizzas{% endblock %}
 
 {% block content %}
-<div class="columns">
-    <div class="column is-offset-3 is-6">
+<div class="container">
+    <div class="mb-5">
         <a href="{{ url_for('pipshash.add_pizza') }}" class="button is-success">
             <i class="fa-solid fa-plus"></i> &nbsp; Agregar pizza
         </a>
-        <br><br>
+    </div>
 
-        {% for pizzas in pipshash %}
-        <div class="card">
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-content">
-                        <p class="title is-4">{{ pizzas.nombre }}</p>
-                    </div>
+    <div class="columns is-multiline">
+        {% for pizza in pipshash %}
+        <div class="column is-one-third">
+            <div class="card">
+                <div class="card-content has-text-centered">
+                    <p class="title is-4">{{ pizza.nombre }}</p>
                 </div>
-                <div class="content">
-                    <a href="{{ url_for('pipshash.update_pizza', id=pizzas.id) }}" class="button is-small is-link is-outlined">
+
+                <div class="card-image has-text-centered">
+                    <figure class="image is-4by3" style="max-width: 200px; margin: 0 auto;">
+                        <img src="{{ url_for('static', filename='img/' + pizza.imagen) }}" alt="Imagen de {{ pizza.nombre }}">
+                    </figure>
+                </div>
+
+                <div class="card-content">
+                    <p><strong>Masa:</strong> {{ pizza.masa }}</p>
+                    <p><strong>Queso:</strong> {{ pizza.queso }}</p>
+                </div>
+
+                <div class="card-footer has-text-centered" style="display: flex; justify-content: space-around; padding: 1rem;">
+                    <a href="{{ url_for('pipshash.update_pizza', id=pizza.id) }}" class="button is-small is-link is-outlined">
                         <i class="fa-solid fa-pen-to-square"></i> Editar
                     </a>
-                    <a href="{{ url_for('pipshash.delete_pizzas', id=pizzas.id) }}" class="button is-small is-danger is-outlined">
+                    <a href="{{ url_for('pipshash.delete_pizzas', id=pizza.id) }}" class="button is-small is-danger is-outlined">
                         <i class="fa-solid fa-trash"></i> Eliminar
                     </a>
                 </div>
