--- a/app/templates/repartidores/update_repartidor.html
+++ b/app/templates/repartidores/update_repartidor.html
@@ -7,28 +7,51 @@
             <div class="card-content">
                 <h2 class="title is-4 has-text-centered">Actualizar Repartidor</h2>
                 <form action="{{ url_for('repartidores.update_repartidor', id=repartidor.id) }}" method="post">
+
                     <div class="field">
                         <label class="label">Nombre:</label>
                         <div class="control">
                             <input class="input" type="text" name="nombre" value="{{ repartidor.nombre }}">
                         </div>
                     </div>
+
                     <div class="field">
                         <label class="label">Placa de la Moto:</label>
                         <div class="control">
                             <input class="input" type="text" name="placa_moto" value="{{ repartidor.placa_moto }}">
                         </div>
                     </div>
+
                     <div class="field">
                         <label class="label">Capacidad de Entregas:</label>
                         <div class="control">
                             <input class="input" type="number" name="capacidad" value="{{ repartidor.capacidad }}">
                         </div>
                     </div>
+
+                    <div class="field">
+                        <label class="label">Imagen actual</label>
+                        <div class="control">
+                            {% if repartidor.imagen %}
+                                <img src="{{ url_for('static', filename='img/' + repartidor.imagen) }}" alt="Imagen del repartidor" width="150">
+                            {% else %}
+                                <p>No hay imagen</p>
+                            {% endif %}
+                        </div>
+                    </div>
+                
+                    <div class="field">
+                        <label class="label">Nueva Imagen (opcional)</label>
+                        <div class="control">
+                            <input class="input" type="file" name="imagen">
+                        </div>
+                    </div>
+
                     <div class="buttons">
                         <button class="button is-success" type="submit">Actualizar</button>
                         <a class="button is-danger" href="{{ url_for('repartidores.listar_repartidores') }}">Cancelar</a>
                     </div>
+
                 </form>
             </div>
         </div>
