--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="dashboard">
-            <h1 class="titulo">Dashboard de Domino's Pipshash 2.6.1</h1>
+            <h1 class="titulo">Dashboard de Domino's Pipshash Práctica 3 - Kubernetes</h1>
 
             <div class="dashboard_contenedor">
 
